# simple-proxy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
client/: package-lock.json  package.json
client/src/: App.svelte  api.ts
client/src/lib/: TunnelCreation.svelte  TunnelDisplay.svelte
client/src/stores/: tunnels.ts
client/src/types/: tunnel.d.ts
src/: db.rs  main.rs  models.rs  proxy_service.rs  schema.rs
