[package]
name = "simple-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["mysql", "mysql_backend"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.26", features = ["http1", "http2", "server", "tcp", "client"] }
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
